Fixed images syntax error and filenames (spacing issues)

--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,8 @@ Page-Specific
 /* PAGE: Home */
 .hero {
     /* Add a background image for the hero section */
-    background-image: url("images/Outer Space.png");
+    /* Note: @Tiana Since this CSS file is nested in a folder, we have to include "../" to tell the link to back out to and start from the main directory */
+    background-image: url("../images/Outer-Space.png");
 
     /* Adjust image size to cover the entire section */
     background-size: cover;
@@ -133,7 +134,8 @@ Page-Specific
 
 .graphics {
     /* Optional: Add a background image for the hero section */
-    background-image: url("images/thumbnail-graphic design butterfly.png");
+    /* Note: @Tiana Since this CSS file is nested in a folder, we have to include "../" to tell the link to back out to and start from the main directory */
+    background-image: url("..images/thumbnail-graphic-design-butterfly.png");
 
     /* Optional: Make the image cover the entire section */
     background-size: cover;
@@ -153,7 +155,8 @@ Page-Specific
 
 .photovideo {
     /* Optional: Add a background image for the hero section */
-    background-image: url("images/thumbnail-Photo Video.png");
+    /* Note: @Tiana Since this CSS file is nested in a folder, we have to include "../" to tell the link to back out to and start from the main directory */
+    background-image: url("..images/thumbnail-Photo-Video.png");
 
     /* Optional: Make the image cover the entire section */
     background-size: cover;
